# fireminipro

./: .gitattributes  CMakeLists.txt  LICENSE  README.md  RELNOTES.md
.github/workflows/: appimage.yml  macos.yml  macos12.yml  macos_universal.yml
Formula/: fireminipro.rb
cmake/: Info.plist.in  version.txt
resources/: icons.qrc
src/: HexView.cpp  HexView.h  LoadPreviewBar.cpp  LoadPreviewBar.h  MainWindow.cpp  MainWindow.h  ProcessHandling.cpp  ProcessHandling.h  SegmentTableView.cpp  SegmentTableView.h  SegmentView.cpp  SegmentView.h  main.cpp
